--- a/reference.bib
+++ b/reference.bib
@@ -7,6 +7,13 @@
   year={2015},
 }
 
+@article{OpticalFlow,
+  title={The perception of the visual world.},
+  author={Gibson, James J},
+  year={1950},
+  publisher={Houghton Mifflin}
+}
+
 @article{SegNet,
   title={SegNet: A Deep Convolutional Encoder-Decoder Architecture for Scene Segmentation},
   author={Badrinarayanan, Vijay and Kendall, Alex and Cipolla, Roberto},
