complete the abstract

--- a/vos.tex
+++ b/vos.tex
@@ -50,12 +50,20 @@
 \maketitle
 
 \begin{abstract}
-Image semantic segmentation is more and more being of interest for computer vision and machine learning researchers.
- Many applications on the rise need accurate and efﬁcient segmentation mechanisms: autonomous driving, indoor navigation, 
- and even virtual or augmented reality systems to name a few.
-  This demand coincides with the rise of deep learning approaches in almost every ﬁeld or application target related to computer vision,
-   including semantic segmentation or scene understanding. This paper provides a review on deep learning methods for semantic segmentation applied to various application areas.
-    Firstly, we describe the terminology of this ﬁeld as well as mandatory background concepts. Next, the main datasets and challenges are exposed to help researchers decide which are the ones that best suit their needs and their targets. Then, existing methods are reviewed, highlighting their contributions and their signiﬁcance in the ﬁeld. Finally, quantitative results are given for the described methods and the datasets in which they were evaluated, following up with a discussion of the results. At last, we point out a set of promising future works and draw our own conclusions about the state of the art of semantic segmentation using deep learning techniques.
+Video object segmentation is more and more being of interest for computer vision and machine learning researchers.
+Many applications on the rise need accurate and efﬁcient segmentation mechanisms: autonomous driving, indoor navigation, 
+and even virtual or augmented reality systems to name a few.
+This demand coincides with the rise of deep learning approaches in almost every ﬁeld or application target related to computer vision,
+including video objects segmentation or scene understanding.
+
+This paper provides a review on deep learning method for video objects segmentation in various setting, which can mainly be divided in semi-supervised and unsepervised manner. The huge difference between 
+two setting is whether the first frame groundtruth is given in test phase.
+Firstly, we address the important of video objects for many practical applications. Then, the popular deep learning archtectures and datasets are exposed  to help researchers have a big picture of 
+video objects segmentation and an understanding of the efforts worked by former researchers.
+Then we revise some existing methods which can tackle video objects segmenation successfully, and highlight their contributions and significance.
+Finally, quantitative results are given for the described methods and the datasets in which they were evaluate, 
+following up with a discussion of the results. 
+At last, we point out a set of promising future works and draw our own conclusions about state-of-art video objects segmenation algorithms.
 \end{abstract}
 
 \input{introduction}
