--- a/background.tex
+++ b/background.tex
@@ -68,21 +68,30 @@ Optical flow or optic flow is the pattern of apparent motion of objects, surface
     \label{optical flow}
 \end{figure}
 
-Video object segmentation is challenging due to fast moving objects, deforming shapes, and cluttered backgrounds. optical flow can be used to propagate an object segmentation over time but, unfortunately, flow is often inaccurate, particularly around object boundaries. Such boundaries are precisely where we want our segmentation to be accurate. To obtain accurate segmentation across time.  Tsai \etal propose an efﬁcient algorithm\cite{OFL}  that considers video segmentation and optical flow estimation simultaneously, formulate a principled, multiscale, spatio-temporal objective function that uses optical flow to propagate information between frames. For optical flow estimation, particularly at object boundaries.they show that segmentation results can be used to reﬁne the optical flow, and vice versa, in the proposed object flow algorithm, and can be efﬁciently computed by iterative optimization.
+Video object segmentation is challenging due to fast moving objects, deforming shapes, and cluttered backgrounds. optical flow can be used to propagate an object segmentation over time but, unfortunately, flow is often inaccurate, particularly around object boundaries. Such boundaries are precisely where we want our segmentation to be accurate. To obtain accurate segmentation across time.  Tsai \etal propose an efficient algorithm\cite{OFL}  that considers video segmentation and optical flow estimation simultaneously, formulate a principled, multiscale, spatio-temporal objective function that uses optical flow to propagate information between frames. For optical flow estimation, particularly at object boundaries.they show that segmentation results can be used to refine the optical flow, and vice versa, in the proposed object flow algorithm, and can be efficiently computed by iterative optimization.
 
+
+\begin{figure*}
+    \begin{center}
+        \includegraphics[width=\textwidth]{figure/fine_tune.png}
+    \end{center}
+    \caption{Fine Tune Method Pipline}
+    \label{fine_tune}
+\end{figure*}
+
+
+\subsubsection{Mask Warp}
+We use flow in two complementary ways. First, to obtain a better initial estimate of M t we warp M t−1 using the flow F t : M t = f I (I t , w(M t−1 , F t )); we call this "mask warping". Second, we use flow as a direct source of information about the mask M t . As can be seen in Figure 2, when the object is moving relative to background, the flow magnitude kF t k provides a very reasonable estimate of the mask M t . We thus consider using a convnet specifically for mask estimation from flow: M t = f F (F t , w(M t−1 , F t )), and merge it with the image-only version by naive averaging.
 
 \subsection{Common Method for One-Shot}
 
 \subsubsection{Fine-Tune}
-Let us assume that one would like to segment an object in a video, for which the only available piece of information is its foreground/background segmentation in one frame. Intuitively, one could analyze the entity, create a model, and search for it in the rest of the frames. For humans, this very limited amount of information is more than enough, and changes in appearance, shape, occlusions, etc. do not pose a signiﬁcant challenge, because we leverage strong priors: ﬁrst “It is an object,” and then “It is this particular object.” Our method is inspired by this gradual reﬁnement.
+Let us assume that one would like to segment an object in a video, for which the only available piece of information is its foreground/background segmentation in one frame. Intuitively, one could analyze the entity, create a model, and search for it in the rest of the frames. For humans, this very limited amount of information is more than enough, and changes in appearance, shape, occlusions, etc. do not pose a significant challenge, because we leverage strong priors: first “It is an object,” and then “It is this particular object.” Our method is inspired by this gradual refinement.
 
-We train a Fully Convolutional Neural Network (FCN) for the binary classiﬁcation task of separating the foreground object from the background. We use two successive training steps: First we train on a large variety of objects, offline, to construct a model that is able to discriminate the general notion of a foreground object, i.e., “It is an object.” Then, at test time, we ﬁne-tune the network for a small number of iterations on the particular instance that we aim to segment, i.e., “It is this particular object.” The overview of our method is illustrated in Figure 2.
+Fine-Tune method \cite{OSVOS} \cite{OSVOS-S} \cite{OnAVOS} train a BackBone Fully Convolutional Neural Network (BFCN) for the binary classification task of separating the foreground object from the background, Then use two successive training steps: First train on a large variety of objects offline, to construct a model that is able to discriminate the general notion of a foreground object, i.e., “It is an object.” Then, at test time, fine-tune the network for a small number of iterations on the particular instance that we aim to segment, i.e., “It is this particular object.” The overview of our method is illustrated in Fig.\ref{fine_tune}.
 
 \subsubsection{Data Dreaming}
 To train the function f one would think of using ground truth data for M t−1 and M t (like [9], [11], [12]), however such data is expensive to annotate and rare. [9] thus trains on a set of 30 videos (∼ 2k frames) and requires the model to transfer across multiple tests sets. [10] side-steps the need for consecutive frames by generating synthetic masks M t−1 from a saliency dataset of ∼ 10k images with their corresponding mask M t . We propose a new data generation strategy to reach better results using only ∼100 individual training frames.
 
-Ideally training data should be as similar as possible to the test data, even subtle differences may affect quality (e.g. training on static images for testing on videos under-performs [62]). To ensure our training data is in-domain, we propose to generate it by synthesizing samples from the provided annotated frame (ﬁrst frame) in each target video. This is akin to “lucid dreaming” as we intentionally “dream” the desired data by creating sample images that are plausible hypothetical future frames of the video. The outcome of this process is a large set of frame pairs in the target domain (2.5k pairs per annotation) with known optical flow and mask annotations, see Figure 5.
+Ideally training data should be as similar as possible to the test data, even subtle differences may affect quality (e.g. training on static images for testing on videos under-performs [62]). To ensure our training data is in-domain, we propose to generate it by synthesizing samples from the provided annotated frame (first frame) in each target video. This is akin to “lucid dreaming” as we intentionally “dream” the desired data by creating sample images that are plausible hypothetical future frames of the video. The outcome of this process is a large set of frame pairs in the target domain (2.5k pairs per annotation) with known optical flow and mask annotations, see Figure 5.
 
-
-\subsubsection{Mask Warp}
-We use flow in two complementary ways. First, to obtain a better initial estimate of M t we warp M t−1 using the flow F t : M t = f I (I t , w(M t−1 , F t )); we call this "mask warping". Second, we use flow as a direct source of information about the mask M t . As can be seen in Figure 2, when the object is moving relative to background, the flow magnitude kF t k provides a very reasonable estimate of the mask M t . We thus consider using a convnet speciﬁcally for mask estimation from flow: M t = f F (F t , w(M t−1 , F t )), and merge it with the image-only version by naive averaging.
