Finish data dreaming

--- a/background.tex
+++ b/background.tex
@@ -91,7 +91,14 @@ Let us assume that one would like to segment an object in a video, for which the
 Fine-Tune method \cite{OSVOS} \cite{OSVOS-S} \cite{OnAVOS} train a BackBone Fully Convolutional Neural Network (BFCN) for the binary classification task of separating the foreground object from the background, Then use two successive training steps: First train on a large variety of objects offline, to construct a model that is able to discriminate the general notion of a foreground object, i.e., “It is an object.” Then, at test time, fine-tune the network for a small number of iterations on the particular instance that we aim to segment, i.e., “It is this particular object.” The overview of our method is illustrated in Fig.\ref{fine_tune}.
 
 \subsubsection{Data Dreaming}
-To train the function f one would think of using ground truth data for M t−1 and M t (like [9], [11], [12]), however such data is expensive to annotate and rare. [9] thus trains on a set of 30 videos (∼ 2k frames) and requires the model to transfer across multiple tests sets. [10] side-steps the need for consecutive frames by generating synthetic masks M t−1 from a saliency dataset of ∼ 10k images with their corresponding mask M t . We propose a new data generation strategy to reach better results using only ∼100 individual training frames.
+To train the video segmentation network one would think of using ground truth data for $M_{t−1}$ and $M_t$ (like \cite{OSVOS}, \cite{bertinetto2016fully}, \cite{held2016learning}), however such data is expensive to annotate and rare. \cite{OSVOS} thus trains on a set of 30 videos (∼ 2k frames) and requires the model to transfer across multiple tests sets. \cite{Perazzi2017Learning} side-steps the need for consecutive frames by generating synthetic masks $M_{t-1}$ from a saliency dataset of ∼ 10k images with their corresponding mask $M_t$ . Data Dreaming Method\cite{LucidTracker} propose a new data generation strategy to reach better results using only ∼100 individual training frames.
 
-Ideally training data should be as similar as possible to the test data, even subtle differences may affect quality (e.g. training on static images for testing on videos under-performs [62]). To ensure our training data is in-domain, we propose to generate it by synthesizing samples from the provided annotated frame (first frame) in each target video. This is akin to “lucid dreaming” as we intentionally “dream” the desired data by creating sample images that are plausible hypothetical future frames of the video. The outcome of this process is a large set of frame pairs in the target domain (2.5k pairs per annotation) with known optical flow and mask annotations, see Figure 5.
+\begin{figure}[ht]
+    \centering
+    \includegraphics[width=0.5\textwidth]{./figure/data_dream.png}
+    \caption{Data Dream on DAVIS-2016 Sequence}
+    \label{data dream}
+\end{figure}
+
+Ideally training data should be as similar as possible to the test data, even subtle differences may affect quality (e.g. training on static images for testing on videos under-performs \cite{tang2012shifting}). To ensure our training data is in-domain, \cite{LucidTracker} propose to generate it by synthesizing samples from the provided annotated frame (first frame) in each target video. This is akin to “lucid dreaming” as we intentionally “dream” the desired data by creating sample images that are plausible hypothetical future frames of the video. The outcome of this process is a large set of frame pairs in the target domain (2.5k pairs per annotation) with known optical flow and mask annotations, see Fig.\ref{data dream}.
 
