--- a/reference.bib
+++ b/reference.bib
@@ -7,6 +7,32 @@
   year={2015},
 }
 
+@inproceedings{tang2012shifting,
+  title={Shifting weights: Adapting object detectors from image to video},
+  author={Tang, Kevin and Ramanathan, Vignesh and Fei-Fei, Li and Koller, Daphne},
+  booktitle={Advances in Neural Information Processing Systems},
+  pages={638--646},
+  year={2012}
+}
+
+@inproceedings{held2016learning,
+  title={Learning to track at 100 fps with deep regression networks},
+  author={Held, David and Thrun, Sebastian and Savarese, Silvio},
+  booktitle={European Conference on Computer Vision},
+  pages={749--765},
+  year={2016},
+  organization={Springer}
+}
+
+@inproceedings{bertinetto2016fully,
+  title={Fully-convolutional siamese networks for object tracking},
+  author={Bertinetto, Luca and Valmadre, Jack and Henriques, Joao F and Vedaldi, Andrea and Torr, Philip HS},
+  booktitle={European conference on computer vision},
+  pages={850--865},
+  year={2016},
+  organization={Springer}
+}
+
 @article{OpticalFlow,
   title={The perception of the visual world.},
   author={Gibson, James J},
