Change paper structure

--- a/methods.tex
+++ b/methods.tex
@@ -2,40 +2,19 @@
 
 \subsection{Semi-supervised VOS}
 
-% Single Object
+\subsubsection{OSVOS}
 
-% \mtodo{Sort by IoU: 
-% 	LucidTracker~\cite{LucidTracker}, 
-% 	OnAVOS~\cite{OnAVOS},
-% 	OSVOS$^\text{S}$~\cite{OSVOS-S}, 
-% 	SGV~\cite{SGV},
-% 	MaskRNN~\cite{MaskRNN},
-% 	OSVOS~\cite{OSVOS}, 
-% 	MSK~\cite{MSK},
-% 	OSMN~\cite{OSMN}, 
-% 	SFL~\cite{SFL}, 
-% 	CTN~\cite{CTN}, 
-% 	VPN~\cite{VPN}, 
-% 	PLM~\cite{PLM}, 
-% 	OFL~\cite{OFL}, 
-% 	BVS~\cite{BVS}, 
-% 	FCP~\cite{FCP}, 
-% 	JMP~\cite{JMP}, 
-% 	HVS~\cite{HVS}, 
-% 	SEA~\cite{SEA} 
-% }
+\subsubsection{LucidTracker}
 
 
-% Mutliple Objects
-% \mtodo{Sort by IoU: 
-% 	DyeNet~\cite{DyeNet}, 
-% 	MaskRNN~\cite{MaskRNN}, 
-% 	OSVOS~\cite{OSVOS}, 
-% 	OSMN~\cite{OSMN}, 
-% 	LucidTracker~\cite{LucidTracker},
-% 	OSVOS$^\text{S}$~\cite{OSVOS-S},
-% 	MSK~\cite{MSK},
-% }
+\subsubsection{PML}
+
+
+\subsubsection{DyeNet}
+
+
+\subsubsection{CTN}
+
 
 \subsection{Unsupervised VOS}
 Video object segmentation is the task of extracting spatio-temporal regions that correspond to object moving in at
